--- a/web/public/index.html
+++ b/web/public/index.html
@@ -28,6 +28,7 @@
     href="https://fonts.googleapis.com/css2?family=Lato&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,300&display=swap"
     rel="stylesheet">
   <title>MintGoldDust - Coding Challenge</title>
+  <script src="https://kit.fontawesome.com/bc85a86372.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
